--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>Suriyanarayanan Venkatesan</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -52,9 +52,6 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-        </li>
       </ul>
     </div>
   </nav>
@@ -63,18 +60,37 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Clarence
-          <span class="text-primary">Taylor</span>
+        <h1 class="mb-0">Suriyanarayanan
+          <span class="text-primary">Venkatesan</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+        <div class="subheading mb-5">Data Science · Machine Learning · Deep Learning ·
+          <a href="mailto:name@email.com">vsuriya93@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">Hello! I am Suriya - Nice to meet you</p>
+        <p class="lead mb-5">I am currenly working on Data Science, and ML problems pertatining to Maps @Grab - such as Travel Time Estimation, Real-time traffic, Network Smoothening. The models which I have built are currenlty handling requests in order of Millions each day!</p>
+        <p class="lead mb-5">Prior to this, I was working in Banglore as a Software Engineer in Deep Learningm where I built and deployed a small robo car with abilities to self drive, detect obstabls and signals - using Raspberry Pi, ROS, Flask and Pi-Camera</p>
+        <p class="lead mb-5">Some Topics which I am currenlty excited about </p>
+
+        <ul class="fa-ul mb-0">
+          <li>
+           <i class="fa-li fa fa-check"></i>
+            Explainable and interpretable AI</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Generative adversarial networks</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Graph Algorithms - Spectral and Spaital</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            As always - Building and breaking stuffs! - Model Deployment, Flask Serving, k8s, Loadtesting</li>
+        </ul><br>
+
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/vsuriya93/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/vsuriya93">
             <i class="fab fa-github"></i>
           </a>
           <a href="#">
@@ -95,45 +111,45 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Lead Data Scientist</h3>
+            <div class="subheading mb-3">GrabTaxi (Singapore)</div>
+            <p>Working with Large Scale datasets pertaining to Maps, real-time traffic, travel time estimation, Speed prediction and network related smoothening. Also exploring building tools for explainable predicitons, monitoring model performance, feature drifts and automation pipeline using Kubeflow/ML-Flow </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">April 2020 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Senior Data Scientist</h3>
+            <div class="subheading mb-3">GrabTaxi (Singapore)</div>
+            <p>Built models for When-will-you-arrive ETA predictions for Cabs, deployed regionally over 100+ cities in South-East-Asia. Incorporated driver behaviour patterns, historic traffic conditions and built scalable data pipelines to ensure high quality data for model training and production deployment.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">November 2017 - March 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Junior Web Designer</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+            <h3 class="mb-0">Software Engineer (Machine Learning)</h3>
+            <div class="subheading mb-3">Mobiliya (Bangalore)</div>
+            <p>Built prototype for Self-Drive robot racing car (hotweels) and deployed using Flask, Raspberry Pi and Tensorflow. This uses Learnable activations, combined with NVIDIA proposed architecture for self-drive vehicles - Integration with ROS (Robot Operating System) to enable communications with other devices.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">July 2017 - October 2017</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Web Design Intern</h3>
-            <div class="subheading mb-3">Shout! Media Productions</div>
-            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+            <h3 class="mb-0">Intern (Data Analytics)</h3>
+            <div class="subheading mb-3">SCIO Analytics (Chennai)</div>
+            <p>Built and locally served (flask) in-house tools for automation of business process which now intergrated with SCIO code base for business utility. Supported with Documentation, Database authentication, Customizable output templates and reduces human effort from ~2hrs to less than 5-sec. </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">September 2008 - June 2010</span>
+            <span class="text-primary">April 2016 - May 2016</span>
           </div>
         </div>
 
@@ -145,141 +161,131 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
-        <h2 class="mb-5">Education</h2>
+        <h2 class="mb-5">Education &amp; Projects</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">Sri Sathya Sai Institute of Higher Learning</h3>
+            <div class="subheading mb-3">Master of Technology Computer Science</div>
+            <div class="subheading mb-3">Relevant Courses</div>
+            <div><p>Machine Learning, Digital Image Processing, Mining of Massive Datasets, Distributed Computing and Operating Systems </p></div>
+            <div class="subheading mb-3">(Project) Deep Learning for Graph Representation</div>
+            <div><p>Using variants for Shallow/deep Neural Networks for learning latent semantic representaions for Graphs - with focus on obtaining Low-Dimensional Embeddings for trajectory clustering, Youtube users Graph and Protein-Interaction. <i>Thesis provided upon request</i></p></div>
+            <div class="subheading mb-3">Teaching Assistant - Machine Learning and Data Science</div>
+            <div><p>Handled Lab courses for M.Tech and M.Sc on Machine Learning and Data Science. Built a course lab management system for assignment submission and grading for the couses I was handling. </p></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">GPA: 8.7 / 10.00</span>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2015 - April 2017</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Sri Sathya Sai Institute of Higher Learning</h3>
+            <div class="subheading mb-3">Master of Science Mathematics (Computer Science Specilization)</div>
+            <div class="subheading mb-3">Relevant Courses</div>
+            <div><p>Numerical Linear Algebra, Statistics, Functional Analysis and Measure Theory </p></div>
+            <div class="subheading mb-3">(Project) Active Shape and Appearance Models</div>
+            <div><p>Using Traditional ML and Image processing techniques to detect landmark points, construct various facical expression from EigenFace and its principle components. This method can generate expressions such as smiling, frowning for a given face which are not initally part of the training corpus. <i>Thesis provided upon request</i></p></div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">GPA: 8.7 / 10.00</span>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2013 - April 2015</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Sri Sathya Sai Institute of Higher Learning</h3>
+            <div class="subheading mb-3">Bachelor of Science (Hons.) Mathematics</div>
+            <div class="subheading mb-3">Relevant Courses</div>
+            <div><p>Calculus, Linear Algebra, Numerical Analysis, Graph Theory, Discreet Mathematics and Optimization Theory, </p></div>
+            <div class="subheading mb-3">(Project) Recursive File &amp; Directory Transfer over LAN</div>
+            <div><p>Implemented a simple file and directory transfer over LAN (server/client architecture) using socker programming in C (Unix Systems)</i></p></div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">GPA: 4.74 / 5.00</span>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2010 - April 2013</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">Sri Sathya Sai Higher Secondary School</h3>
+            <div class="subheading mb-3">High School</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">Score: 93.6%</span>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2008 - March 2010</span>
           </div>
         </div>
 
       </div>
     </section>
-
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
       <div class="w-100">
-        <h2 class="mb-5">Skills</h2>
-
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
-        </ul>
-
-        <div class="subheading mb-3">Workflow</div>
+        <h2 class="mb-5">Skills &amp; Workshops &amp; Courses </h2>
+        <div class="subheading mb-3">Skills</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Mobile-First, Responsive Design</li>
+            <b>Programming - </b>Python, C++, golang</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Browser Testing &amp; Debugging</li>
+            <b>ML Tools - </b>Sklearn, xgboost, tensorflow, keras and pytorch</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Cross Functional Teams</li>
+            <b>Frameworks - </b>Spark, presto SQL, Airflow, Kubeflow </li>
+          <p></p>
+        </ul>
+        <div class="subheading mb-3">Talks &amp; Workshops</div>
+          <ul class="fa-ul mb-0">
+            <li>
+              <i class="fa-li fa fa-microphone text-warning"></i>
+              <b>Grab 2020: </b>(AI Workshop) Introduction to Neural Networks and Deep Learning</li>
+            <li>
+              <i class="fa-li fa fa-microphone text-warning"></i>
+              <b>Grab 2019: </b> (AI Workshop) Hyperparameter Tuning and Optimization for ML Algorithms</li>
+            <li>
+              <i class="fa-li fa fa-microphone text-warning"></i>
+              <b>Grab 2018: </b>(Tech Talk) Traffic and Travel Time Estimation</li>
+            <li>  
+            <li>
+              <i class="fa-li fa fa-microphone text-warning"></i>
+              <b>SSSIHL 2017: </b> (AI Workshop) Recurrent Neural Networks (with Hands-on Lab)</li>
+          </ul>
+          <p></p>
+        <div class="subheading mb-3">Courses &amp; Certifications</div>
+        <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-check"></i>
-            Agile Development &amp; Scrum</li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            <b>Coursera - </b> Machine Learning (Stanford)</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+          <b>Coursera - </b>Advanced Machine Learning (In-Progress)</li>
         </ul>
       </div>
     </section>
+    
 
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
-      </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
-      <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
-        <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
-        </ul>
+        <p>Apart from being a Data Science enthusiast, I enjoy most of my time being outdoors. I like trekking, reading harry potter, traveling - especially to beaches and sea.</p>
+        <p class="mb-0">When forced indoors, I try cooking (95th percentile says edible), photography and playing Asphalt 8 </p>
       </div>
     </section>
 
