update social media profile

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
           <a href="https://github.com/vsuriya93">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+          <a href="https://twitter.com/vsuriya93">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
+          <a href="https://instagram.com/vsuriya93">
+            <i class="fab fa-instagram"></i>
           </a>
         </div>
       </div>
