--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <a href="mailto:name@email.com">vsuriya93@gmail.com</a>
         </div>
         <p class="lead mb-5">Hello! I am Suriya - Nice to meet you</p>
-        <p class="lead mb-5">I am currenly working on Data Science, and ML problems pertatining to Maps @Grab - such as Travel Time Estimation, Real-time traffic, Network Smoothening. The models which I have built are currenlty handling requests in order of Millions each day!</p>
+        <p class="lead mb-5">I am currenly working on Data Science, and ML problems pertaining to Maps @Grab - such as Travel Time Estimation, Real-time traffic, Network Smoothening. The models which I have built are currenlty handling requests in order of Millions each day!</p>
         <p class="lead mb-5">Prior to this, I was working in Banglore as a Software Engineer in Deep Learning where I built and deployed a small robo car with abilities to self drive, detect obstabls and signals - using Raspberry Pi, ROS, Flask and Pi-Camera</p>
         <p class="lead mb-5">Some Topics which I am currenlty excited about </p>
 
